[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
    "numpy==1.23.3",
    "Cython==0.29.32",
]


[project]
name = "BEERS2"
version = "2.0"
dependencies = [
    #"numpy",
    #"scipy",
    #"roman",
    #"pysam",
    #"pandas",
    #"matplotlib",
    #"termcolor",
    #"prettytable",
    #"Sphinx",
    #"sphinx-rtd-theme",
    #"Cython",
    #"snakemake",

    "alabaster==0.7.12",
    "appdirs==1.4.4",
    "attrs==22.1.0",
    "Babel==2.10.3",
    "certifi==2022.9.24",
    "charset-normalizer==2.1.1",
    "ConfigArgParse==1.5.3",
    "connection-pool==0.0.3",
    "contourpy==1.0.5",
    "cycler==0.11.0",
    "Cython==0.29.32",
    "datrie==0.8.2",
    "decorator==5.1.1",
    "docutils==0.17.1",
    "dpath==2.0.6",
    "fastjsonschema==2.16.2",
    "fonttools==4.37.3",
    "gitdb==4.0.9",
    "GitPython==3.1.27",
    "idna==3.4",
    "imagesize==1.4.1",
    "Jinja2==3.1.2",
    "jsonschema==4.16.0",
    "jupyter-core==4.11.1",
    "kiwisolver==1.4.4",
    "MarkupSafe==2.1.1",
    "matplotlib==3.6.0",
    "nbformat==5.6.1",
    "numpy==1.23.3",
    "packaging==21.3",
    "pandas==1.5.0",
    "Pillow==9.2.0",
    "plac==1.3.5",
    "prettytable==3.4.1",
    "psutil==5.9.2",
    "PuLP==2.6.0",
    "py==1.11.0",
    "Pygments==2.13.0",
    "pyparsing==3.0.9",
    "pyrsistent==0.18.1",
    "pysam==0.19.1",
    "python-dateutil==2.8.2",
    "pytz==2022.2.1",
    "PyYAML==6.0",
    "ratelimiter==1.2.0.post0",
    "requests==2.28.1",
    "retry==0.9.2",
    "roman==3.3",
    "scipy==1.9.1",
    "six==1.16.0",
    "smart-open==6.2.0",
    "smmap==5.0.0",
    "snakemake==7.14.2",
    "snowballstemmer==2.2.0",
    "Sphinx==5.2.2",
    "sphinx-rtd-theme==1.0.0",
    "sphinxcontrib-applehelp==1.0.2",
    "sphinxcontrib-devhelp==1.0.2",
    "sphinxcontrib-htmlhelp==2.0.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.3",
    "sphinxcontrib-serializinghtml==1.1.5",
    "stopit==1.1.2",
    "tabulate==0.8.10",
    "termcolor==2.0.1",
    "toposort==1.7",
    "traitlets==5.4.0",
    "urllib3==1.26.12",
    "wcwidth==0.2.5",
    "wrapt==1.14.1",
    "yte==1.5.1",
]
