[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
    "numpy==1.23.3",
    "Cython==0.29.32",
]


[project]
name = "BEERS2"
version = "2.0"
dependencies = [
    #"numpy",
    #"scipy",
    #"pandas",
    #"Cython",
    #"snakemake",
    #"pysam",
    #"roman",
    #"matplotlib",
    #"termcolor",
    #"prettytable",
    #"Sphinx",
    #"sphinx-rtd-theme",

    # These must be updated whenever the submodules are updated
    "beers_utils @ git+https://github.com/itmat/BEERS_UTILS@88a021358567e8f64a4bc6ad7cbdfdaf30ae6fe8",
    "camparee @ git+https://github.com/itmat/CAMPAREE@91b4f32083107e7c4191f250317f135c12795916",

    "appdirs==1.4.4",
    "attrs==22.1.0",
    "certifi==2022.9.24",
    "charset-normalizer==2.1.1",
    "ConfigArgParse==1.5.3",
    "connection-pool==0.0.3",
    "Cython==0.29.32",
    "datrie==0.8.2",
    "decorator==5.1.1",
    "docutils==0.19",
    "dpath==2.0.6",
    "fastjsonschema==2.16.2",
    "gitdb==4.0.9",
    "GitPython==3.1.27",
    "idna==3.4",
    "Jinja2==3.1.2",
    "jsonschema==4.16.0",
    "jupyter-core==4.11.1",
    "MarkupSafe==2.1.1",
    "nbformat==5.6.1",
    "numpy==1.23.3",
    "pandas==1.5.0",
    "plac==1.3.5",
    "psutil==5.9.2",
    "PuLP==2.6.0",
    "py==1.11.0",
    "pyrsistent==0.18.1",
    "pysam==0.19.1",
    "python-dateutil==2.8.2",
    "pytz==2022.2.1",
    "PyYAML==6.0",
    "ratelimiter==1.2.0.post0",
    "requests==2.28.1",
    "retry==0.9.2",
    "scipy==1.9.1",
    "six==1.16.0",
    "smart-open==6.2.0",
    "smmap==5.0.0",
    "snakemake==7.14.2",
    "stopit==1.1.2",
    "tabulate==0.8.10",
    "toposort==1.7",
    "traitlets==5.4.0",
    "urllib3==1.26.12",
    "wrapt==1.14.1",
    "yte==1.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "Sphinx",
    "sphinx-rtd-theme",
    "mypy",
]
