[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel",
    "numpy==1.24.2",
    "Cython==0.29.33",
]


[project]
name = "BEERS2"
version = "2.0"
dependencies = [
    # "boto3",
    # "cloudpathlib",
    # "Cython",
    # "matplotlib",
    # "numpy",
    # "pandas",
    # "prettytable", 
    # "pydantic",
    # "pysam",
    # "roman",
    # "scipy",
    # "setuptools",
    # "snakemake",
    # "termcolor",
    # "pyyaml",

    # These must be updated whenever the submodules are updated
    "beers_utils @ git+https://github.com/itmat/BEERS_UTILS@88a021358567e8f64a4bc6ad7cbdfdaf30ae6fe8",
    "camparee @ git+https://github.com/itmat/CAMPAREE@f99f6c2cec78148dedc5c7c3624b6bfd16c2d34a",

    "appdirs==1.4.4",
    "attrs==22.2.0",
    "boto3==1.26.85",
    "botocore==1.29.85",
    "certifi==2022.12.7",
    "charset-normalizer==3.1.0",
    "cloudpathlib==0.13.0",
    "ConfigArgParse==1.5.3",
    "connection-pool==0.0.3",
    "contourpy==1.0.7",
    "cycler==0.11.0",
    "Cython==0.29.33",
    "datrie==0.8.2",
    "docutils==0.19",
    "dpath==2.1.4",
    "fastjsonschema==2.16.3",
    "fonttools==4.39.0",
    "gitdb==4.0.10",
    "GitPython==3.1.32",
    "humanfriendly==10.0",
    "idna==3.4",
    "Jinja2==3.1.2",
    "jmespath==1.0.1",
    "jsonschema==4.17.3",
    "jupyter_core==5.2.0",
    "kiwisolver==1.4.4",
    "MarkupSafe==2.1.2",
    "matplotlib==3.7.1",
    "nbformat==5.7.3",
    "numpy==1.24.2",
    "packaging==23.0",
    "pandas==1.5.3",
    "Pillow==9.4.0",
    "plac==1.3.5",
    "platformdirs==3.1.0",
    "prettytable==3.6.0",
    "psutil==5.9.4",
    "PuLP==2.7.0",
    "pydantic==1.10.5",
    "pyparsing==3.0.9",
    "pyrsistent==0.19.3",
    "pysam==0.20.0",
    "python-dateutil==2.8.2",
    "pytz==2022.7.1",
    "PyYAML==6.0",
    "requests==2.28.2",
    "reretry==0.11.8",
    "roman==4.0",
    "s3transfer==0.6.0",
    "scipy==1.10.1",
    "six==1.16.0",
    "smart-open==6.3.0",
    "smmap==5.0.0",
    "snakemake==7.24.0",
    "stopit==1.1.2",
    "tabulate==0.9.0",
    "termcolor==2.2.0",
    "throttler==1.2.2",
    "toposort==1.10",
    "traitlets==5.9.0",
    "typing_extensions==4.5.0",
    "urllib3==1.26.14",
    "wcwidth==0.2.6",
    "wrapt==1.15.0",
    "yte==1.5.1"
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "Sphinx",
    "sphinx-rtd-theme",
    "mypy",
]
